agregado cambio color del h1, y cambio de tamaño sobre imagen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="cursor"></div>
     <nav>
-        <h1>CursorAnimado</h1>
+        <h1 id="title">CursorAnimado</h1>
         <ul class="nav-links">
             <li>Inicio</li>
             <li>Nosotros</li>
@@ -19,13 +19,13 @@
         </ul>
     </nav>
 
-    <section>
+    <section class="container">
         <div class="front-cover">
-            <img src="./jowi.jpeg" alt="">
+            <img class="img" src="./assets/nati cami valen.jpeg" alt="">
         </div>
         <div class="front-desc">
-            <h2>Descripción</h2>
-            <p>Esto es una descripción</p>
+            <h2>Nevada</h2>
+            <p>El Durazno, Córdoba, Argentina</p>
         </div>
     </section>
 
